--- a/src/app/page/grupo-listar/grupo-listar.component.html
+++ b/src/app/page/grupo-listar/grupo-listar.component.html
@@ -43,7 +43,7 @@
     <ng-container matColumnDef="accion 1">
       <th mat-header-cell *matHeaderCellDef> &nbsp;&nbsp;&nbsp;&nbsp;Accion 1 </th>
       <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary"
-          [routerLink]="['edicion', element?.id]">Editar</button>&nbsp;&nbsp;&nbsp;&nbsp;
+          [routerLink]="['destinos/nuevo', element?.id]">Editar</button>&nbsp;&nbsp;&nbsp;&nbsp;
       </td>
     </ng-container>
   
